fix P1 (Event) TA image txt align (RWD)

--- a/css/rwd.css
+++ b/css/rwd.css
@@ -381,6 +381,11 @@
     height: auto;
   }
 
+
+  .ucblock.txt.long {
+    padding-top: 30px;
+  }
+
 }
 
 @media only screen and (max-width: 404px) {
